# OPMWF

./: README.md
OPMWF/: CMakeLists.txt  evaluation.m
OPMWF/include/: OPMWF.h
OPMWF/include/GROR/: CMakeLists.txt
OPMWF/include/GROR/include/: ia_gror.h  ia_gror.hpp  real_data_test.h
OPMWF/include/GROR/src/: gror_pre.cpp
OPMWF/include/Graph/: transformation_graph.h  transformation_graph.hpp
OPMWF/script/: run.sh
OPMWF/src/: OPMWF.cpp  example_OPMWF.cpp
